<resources>
    <string name="app_name">UVSafeAustralia</string>
    <string name="set_location" translatable="false">Set location</string>
    <string name="location_hint" translatable="false">e.g. Melbourne, VIC</string>
    <string name="hello_there" translatable="false">Hello there....!</string>
    <string name="play_outside" translatable="false">Want to play outside safely?</string>
    <string name="ask_location" translatable="false">Add a location so we can check the weather conditions in this area.</string>
    <string name="logo" translatable="false">LOGO</string>
    <string name="sample">Melbourne, Victoria</string>
    <string name="location_data">Location Data</string>
    <string name="db_content">DB Content</string>
    <string name="search_location">Search the suburb here</string>
    <string name="star_here">Start here</string>
    <string name="check_weather">Skip</string>
    <string name="search_btn">Search</string>
    <string name="notification_uv">Notify me when sun protection is needed</string>
    <string name="alarm">Remind me to reapply sunblock</string>
    <string name="ultrawe">Powered by UltraWe</string>
    <string name="protectRequired">Sun Protection \n Required</string>
    <string name="protectNotRequired">Sun Protection Not \n  Required</string>
    <string name="skinEduVideoResources">Source: https://www.cancer.nsw.gov.au</string>
    <string name="playVideo">Play Video</string>
    <string name="videoResouceSunProtection">Source : SunSmart Victoria : https://www.youtube.com/watch?v=Fwa49vPr-3I</string>
    <string-array name="hours_selection">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
    </string-array>

    <string name="MIA">Melanoma Institute Australia</string>
    <string name="miaLink">https://www.melanoma.org.au/understanding-melanoma/</string>
    <string name="NSW">Cancer Council NSW</string>
    <string name="nswLink">https://www.cancercouncil.com.au/melanoma/about-melanoma</string>
    <string name="VIC">Cancer Council Victoria</string>
    <string name="vicLink">https://www.cancervic.org.au/cancer-information/types-of-cancer/melanoma/melanoma-overview.html</string>
    <string name="start_quiz">Let\'s get started</string>
    <string name="wrongText1">Oh No !!</string>
    <string name="wrongText2">Answer is Incorrect</string>
    <string name="correctText1">Yayyy!!</string>
    <string name="correctText2">You are correct</string>
    <string name="correctText3">The correct answer is</string>
    <string name= "reportText2"> Here is the result of your quiz </string>
    <string name ="reportText3">Want to know where you got wrong?</string>
    <string name = "reportText4">Click on each category below..</string>
    <string name = "cat1"> Sun Protection</string>
    <string name = "reviewText1">Here\'s a review on the questions you attempted </string>
    <string name = "reviewText2">We appreciate your effort..</string>
    <string name = "reviewText3">Seek knowledge and share it your with friends..</string>
    <string name ="clear_lb">This action will clear all the players and their quiz attempts. This process cannot be undone.</string>
    <string name = "slip">Slip on Sun Protective clothing.Cover your skin as much as possible.</string>
    <string name = "slop">Slop on SPF 30 (or higher), broad-spectrum, water resistant sunscreen on to exposed areas of your skin.</string>
    <string name ="slap">Slap on a broad-brimmed hat that shades your face, ears and neck. </string>
    <string name = "seek">Seek Shade and take breaks from sun.</string>
    <string name ="shade">Slide on a pair of sunglasses that have a good UV protection</string>
    <string name ="SunscreenTips">https://www.youtube.com/watch?v=ZG7JPOhWYdA</string>


</resources>