<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginTop="304dp"
        android:text="@string/hello_there"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewMission" />

    <TextView
        android:id="@+id/textViewPlayOutside"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/play_outside"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHello" />

    <Button
        android:id="@+id/locationBtn"
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginBottom="52dp"
        android:text="@string/set_location"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#FFEB00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/location_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/locationBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewAskLocation"
        android:layout_width="288dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/ask_location"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewFeedbackToast"
        android:layout_width="216dp"
        android:layout_height="16dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextLocation" />

    <ImageView
        android:id="@+id/imageViewMission"
        android:layout_width="313dp"
        android:layout_height="338dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mission" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="127dp"
        android:layout_height="121dp"
        android:layout_marginEnd="204dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="204dp"
        android:layout_marginStart="18dp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewMission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_transparent" />

</androidx.constraintlayout.widget.ConstraintLayout>